--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "db:import:web": "node scripts/import-web-recipes.mjs"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.4.0",
